fixed scrollbar

--- a/site/css/index.css
+++ b/site/css/index.css
@@ -2,7 +2,6 @@ html {
     height: 100%; /*altrimenti non funzia il gradiente*/
     font-family: verdana;
     max-width: 100vw; 
-    overflow-x: hidden;
 
 }
 
